[Autofill] Fix heuristics to detect consecutive CVCs.

Added a check after parsing a cvc. If it's the only type parsed so far, check the previous field. If it's also a cvc, just label the current field as a cvc without looking at the next fields. This also fixes some cases where we would label some names as cc-names.

BUG=591498

Review URL: https://codereview.chromium.org/1753253003

Cr-Commit-Position: refs/heads/master@{#380916}

Former-commit-id: a9224ac0cc140b536c8e13099fcf3cfc4cc4a80d